Fixed too much vertical space on desktop

--- a/src/css/components/hamburgers.css
+++ b/src/css/components/hamburgers.css
@@ -7,7 +7,7 @@
  */
 
 .hamburger {
-  padding: 15px 15px;
+  padding: 15px 15px 0px 15px;
   display: inline-block;
   cursor: pointer;
   transition-property: opacity, filter;
